--- a/README
+++ b/README
@@ -1,4 +1,9 @@
-Azei allows you to interact with Vuze by email.
+Azei allows you to interact with Azureus by email.
+
+How it works
+------------
+The plugin checks a POP3 account for emails with a configurable subject. The 
+commands found in the email are executed and the result is emailed back to you.
 
 Installation
 ------------
@@ -8,5 +13,27 @@ License
 -------
 see LICENSE
 
+Usage
+-----
+The following commands are available:
 
-http://www.vuze.com/
+LIST <state>
+will return the list of downloads or seeds or both
+START <state> <index>
+start the download or seed with the given index
+STOP <state> <index>
+stop the download or seed with the given index
+PAUSE <state> <index>
+SET <state> <index> <var> <option> <integer>
+
+state = DOWNLOAD, SEED, ALL
+index = index of a download
+var = LIMIT (only var supported so far)
+option = DOWNLOAD, UPLOAD
+integer = valid integer
+
+any other input is ignored
+
+See also
+--------
+http://azureus.sourceforge.net/
